--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "push": "git add -A && git commit -m 'commit' && git push origin master",
     "start": "nodemon server.js"
   },
   "author": "Thibaut de Hollain",
