--- a/views/package.json
+++ b/views/package.json
@@ -8,7 +8,8 @@
     "popper.js": "^1.12.3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5"
   },
   "devDependencies": {
     "react-scripts": "1.0.11"
