--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
     "mongoose": "^4.10.8",
+    "nodemon": "^1.12.0",
     "path": "^0.12.7",
     "request": "^2.81.0"
   }
