--- a/views/package.json
+++ b/views/package.json
@@ -9,7 +9,8 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
-    "react-icons": "^2.2.5"
+    "react-icons": "^2.2.5",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.11"
