--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
+    "hoek": "^5.0.3",
     "mongoose": "^4.10.8",
     "nodemon": "^1.12.0",
     "path": "^0.12.7",
