--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.10.8",
     "nodemon": "^1.12.0",
     "path": "^0.12.7",
+    "puppeteer": "^1.6.1",
     "request": "^2.81.0"
   }
 }
