--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,3 +17,7 @@ phases:
   post_build:
     commands:
       # - aws s3 sync ./build $S3_BUCKET
+artifacts:
+  files:
+    - '**/*'
+  base-directory: build
