--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
       nodejs: 10
     commands:
       - npm i npm@latest -g
-      - pip install --upgrade pip
-      - pip install --upgrade awscli
+      # - pip install --upgrade pip
+      # - pip install --upgrade awscli
   pre_build:
     commands:
       - npm install
