--- a/barelinks-API-service/serverless.yml
+++ b/barelinks-API-service/serverless.yml
@@ -3,17 +3,14 @@ service: barelinks-api-service
 app: barelinks
 org: tdehollain
 
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
-
 provider:
   name: aws
   runtime: nodejs10.x
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: eu-west-1
   environment:
-    BARELINKS_TABLE: Barelinks
+    BARELINKS_TABLE: ${self:app}-${self:provider.stage}
+    STAGE: ${self:provider.stage}
 
   # IAM statements
   iamRoleStatements:
@@ -25,16 +22,7 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource:
-        - arn:aws:dynamodb:eu-west-1:072129581133:table/Barelinks
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
+        - 'Fn::GetAtt': ['BarelinksTable', 'Arn']
 
 functions:
   getLinks:
@@ -100,3 +88,23 @@ functions:
           path: /link/tag
           method: POST
           cors: true
+
+resources:
+  Resources:
+    BarelinksTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: linkId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: linkId
+            KeyType: RANGE
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        TableName: ${self:provider.environment.BARELINKS_TABLE}
