removed sls deploy step

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,8 @@ phases:
       - npm run build
   post_build:
     commands:
-      - sls deploy --stage $STAGE
+      # - cd barelinks-API-service
+      # - sls deploy --stage $STAGE
       - aws cloudfront create-invalidation --distribution-id E2WAL8O6O28TIF --paths "/*"
 artifacts:
   files:
