--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,10 +17,10 @@ phases:
       - npm run build
   post_build:
     commands:
-      - cd barelinks-API-service
-      - npm install
-      - sls deploy --stage $STAGE
-      - cd ..
+      # - cd barelinks-API-service
+      # - npm install
+      # - sls deploy --stage $STAGE
+      # - cd ..
       - aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
 artifacts:
   files:
