--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 10
     commands:
       - npm i npm@latest -g
-      - npm i serverless@latest -g
+      # - npm i serverless@latest -g
       # - pip install --upgrade pip
       # - pip install --upgrade awscli
   pre_build:
