--- a/barelinks-API-service/serverless.yml
+++ b/barelinks-API-service/serverless.yml
@@ -19,6 +19,7 @@ provider:
       Action:
         - dynamodb:Query
         - dynamodb:Scan
+        - dynamodb:GetItem
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
