--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
       - npm install
   build:
     commands:
-      - npm run build
+      - npm run build:$STAGE
   post_build:
     commands:
       # - cd barelinks-API-service
