--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:dev": "REACT_APP_STAGE=dev npm run build",
-    "build:production": "REACT_APP_STAGE=production npm run build",
+    "build:dev": "export REACT_APP_STAGE=dev && npm run build",
+    "build:production": "export REACT_APP_STAGE=production && npm run build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
