--- a/barelinks-API-service/package.json
+++ b/barelinks-API-service/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.6.0",
     "node-fetch": "^2.6.0",
     "unescape": "^1.0.1"
   }
