--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.4.1",
     "ajv": "^6.0.0",
-    "aws-amplify": "^1.0.4",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "jquery": "^3.4.0",
     "popper.js": "^1.14.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-icons": "^2.2.7",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "1.1.4",
     "react-spinners": "^0.4.4",
-    "redux": "^4.0.0",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0"
   },
