--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# TanStack build artifacts
+.tanstack/
+src/routeTree.gen.ts
+
+# Nitro build artifacts
+.nitro/
+.output/
