--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.85.6",
     "@tanstack/react-router": "^1.131.30",
     "@tanstack/react-router-devtools": "^1.131.30",
+    "@vercel/functions": "^3.0.0",
     "@vercel/node": "^5.3.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
