--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@clerk/clerk-react": "^5.45.0",
     "@clerk/express": "^1.7.26",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.6",
     "@tanstack/react-router": "^1.131.30",
