migrated records from DynamoDB

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.888.0",
+    "@aws-sdk/lib-dynamodb": "^3.888.0",
     "@eslint/js": "^9.33.0",
     "@tanstack/router-plugin": "^1.131.30",
     "@types/node": "^24.3.0",
@@ -48,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
