--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.47.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-router": "^1.132.17",
     "@tanstack/react-router-devtools": "^1.132.17",
@@ -22,6 +23,7 @@
     "pg": "^8.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
@@ -29,9 +31,9 @@
     "@eslint/js": "^9.35.0",
     "@tanstack/router-plugin": "^1.132.17",
     "@types/node": "^24.5.2",
+    "@types/pg": "^8.11.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@types/pg": "^8.11.6",
     "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
